--- a/LOrd_Card_Shop/Master/Navbar.Master
+++ b/LOrd_Card_Shop/Master/Navbar.Master
@@ -65,6 +65,10 @@
             font-weight: bold;
         }
 
+            .username-label:hover{
+                cursor: pointer;
+            }
+
         .profile-btn {
             cursor: pointer;
             font-weight: bold;
@@ -79,11 +83,11 @@
         .profile-menu {
             position: absolute;
             right: 0;
-            background: white;
+            background: #2c3e50;
             border-radius: 8px;
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
             width: 150px;
-            padding: 10px;
+            padding: 20px;
             display: none;
             opacity: 0;
             transform: translateY(-10px);
@@ -93,10 +97,7 @@
         .profile-menu p {
             margin: 0;
             cursor: pointer;
-        }
-
-        .profile-menu p:hover {
-            background: #f1f1f1;
+            margin-bottom: 20px;
         }
 
         .profile-menu.active {
@@ -114,6 +115,14 @@
             #GuestLoginButton:hover {
                 cursor: pointer;
             }
+
+        #LogoutBtn{
+            background: none;
+            color: white;
+            border: none;
+            font-size: medium;
+            margin-left: -20px;
+        }
 
         @media (max-width: 600px) {
             .navbar {
@@ -143,13 +152,11 @@
                 <a href="Cart.aspx">Cart</a>
             </div>
 
-            <asp:Label ID="UsernameLabel" runat="server" CssClass="username-label"></asp:Label>
-
             <div class="nav-buttons">
                 <asp:Panel ID="DefaultNavbar" runat="server" Visible="false">
-                    <p class="profile-btn" onclick="toggleProfileMenu()">Profile</p>
+                    <asp:Label ID="UsernameLabel" runat="server" CssClass="username-label" onclick="toggleProfileMenu()"></asp:Label>
                     <div id="profileMenu" class="profile-menu">
-                        <p>Edit Profile</p>
+                        <a href="Profile.aspx"><p>Profile</p></a>
                         <asp:Button ID="LogoutBtn" runat="server" CssClass="btn" Text="LogOut" OnClick="LogoutBtn_Click" />
                     </div>
                 </asp:Panel>
